# micrometrics

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  README.md
cpp/results/: 0001-string-interning.md  0002-smart-pointers.md
cpp/src/: 0001-string-interning.cpp  0002-smart-pointers.cpp
