#############################################################################
# micrometrics C++ CMake Project
#
# Copyright (c) 2026, Augusto Damasceno. All rights reserved.
#
# SPDX-License-Identifier: BSD-2-Clause
#
# See (https://github.com/augustodamasceno/micrometrics)
#############################################################################

cmake_minimum_required(VERSION 3.16)
project(micrometrics)

add_subdirectory(cpp/)
